--- a/index.html
+++ b/index.html
@@ -4,8 +4,19 @@
         <link rel="stylesheet" type="text/css" href="styles.css">
    </head>
    <body>
-   <p>
-      probando
-   </p>
+      <div id="header">
+         <h1>Breathe Code Photo Feed</h1>
+      </div>
+      <div id="content">
+         <div id="cnt1">
+            <div class="title">
+               <h2>My first Photo</h2>
+               <h2>12/14</h2>
+            </div>
+            <div class="photo">
+               <link href="">
+            </div>
+         </div>
+      </div>
    </body>
 </html>
