--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
         <link rel="stylesheet" type="text/css" href="styles.css">
    </head>
    <body>
-      <div id="header">
+      <div class="header">
          <h1>Breathe Code Photo Feed</h1>
       </div>
-      <div id="content">
+      <div class="content">
 
-         <div id="cnt1">
+         <div class="container">
             <div class="title">
                <h2>My first Photo</h2>
                <h2 class="date">12/14</h2>
@@ -20,7 +20,7 @@
             </div>
          </div>
 
-         <div id="cnt2">
+         <div class="container">
             <div class="title">
                <h2>Some cute thing</h2>
                <h2 class="date">12/14</h2>
@@ -31,7 +31,7 @@
             </div>
          </div>
 
-         <div id="cnt3">
+         <div class="container">
             <div class="title">
                <h2>And of course....food!</h2>
                <h2 class="date">12/14</h2>
